multiple gpu backends

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <div id="measure-parent">
         <pre id="measure">M</pre>
     </div>
-
+    
+    <div id="preview-wrap">
+        <canvas id="preview" aria-label="color preview"></canvas>
+      </div>
+      
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
